# bullet-hell

./: .clang-format  .editorconfig  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README.md  cspell.json
cmake/: uninstall.cmake.in
game/: CMakeLists.txt
game/src/: bullet.cc  bullet.h  collision.cc  config.h.in  direction.h  draw.cc  entity.cc  entity.h  events.cc  explosion.cc  explosion.h  game.cc  game.h  gem.cc  gem.h  input.cc  loader.cc  main.cc  math.h  moving_entity.cc  moving_entity.h  partial_sprite.cc  partial_sprite.h  plasma.cc  plasma.h  process.cc  projectiles.cc  properties.cc  reset.cc  resident_sprite.cc  resident_sprite.h  resources.h  ship.cc  ship.h  shooter.cc  shooter.h  spawn.cc  sprite.cc  sprite.h  trajectories.cc
game/src/entity/: base.cc  base.h  bullet.cc  bullet.h  gem.cc  gem.h  shooter.cc  shooter.h
resource_builder/: CMakeLists.txt
resource_builder/src/: config.h.in  main.cc
shared/: olcPixelGameEngine.h
